# Configz

./: .ctrc.yml  .gitignore  .luacheckrc  .luarc.json  CHANGELOG.md  Cargo.toml  README.md
.github/: test.sh
.github/workflows/: ci.yml  ct-release.yml
definitions/: configz.lua
lua/: rust.lua
src/: main.rs
tests/: directory.lua  download.lua  file.lua  run.lua  template.data.liquid  template.include.liquid  template.lua
