[package]
name = "configz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
rlua = "0.19.4"
log = "0.4.0"
env_logger = "0.10.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
which = "4.3.0"
